# biodivine-aeon-server

./: .gitignore  Cargo.toml  Makefile.toml  README.md  aura_bench.py  bench.py  build.rs  experiment.sh  model_budding_yeast.aeon  model_cell_cycle.aeon  model_drosophila_cell_cycle.aeon  model_erb2.aeon  model_fission_yeast.aeon  model_g2a.aeon  model_paper.aeon  packager.macos.toml  packager.toml  paper.aeon  sketch_bench.py
assets/: icon.icns  index.bundle.html
benchmarks/: Budding yeast (Irons)_instantiated.aeon
icons/: icon.icns
sketch_benchmark_run_1627383134/: [v101]__[r158]__[T-CELL-RECEPTOR-SIGNALING]__[cellcollective]_out.txt  [v104]__[r226]__[EGFR-ERBB-SIGNALING]__[cellcollective]_out.txt  [v110]__[r212]__[RODRIGUEZ-JORGE-TCR-SIGNALLING-17-07-2018]__[ginsim]_out.txt  [v118]__[r218]__[IL1-SIGNALING]__[cellcollective]_out.txt  [v131]__[r302]__[INFLUENZA-VIRUS-REPLICATION-CYCLE]__[cellcollective]_out.txt  [v139]__[r557]__[SIGNAL-TRANSDUCTION-IN-FIBROBLASTS]__[cellcollective]_out.txt  [v188]__[r351]__[CD4-T-CELL-SIGNALING]__[cellcollective]_out.txt  [v20]__[r48]__[ERB-B2]__[ginsim]_out.txt  [v20]__[r51]__[MAMMALIAN-CELL-CYCLE-1607]__[cellcollective]_out.txt  [v20]__[r88]__[SUPP-MAT-MOD-NET]__[ginsim]_out.txt  [v22]__[r39]__[B-CELL-DIFFERENTIATION]__[cellcollective]_out.txt  [v23]__[r24]__[FGF-PATHWAY-12-06-2013]__[ginsim]_out.txt  [v23]__[r24]__[FGF-PATHWAY-OF-DROSOPHILA]__[cellcollective]_out.txt  [v23]__[r34]__[T-CELL-DIFFERENTIATION]__[cellcollective]_out.txt  [v23]__[r43]__[AURORA-KINASE-A-IN-NEUROBLASTOMA]__[cellcollective]_out.txt  [v24]__[r28]__[PROCESSING-OF-SPZ-NETWORK-FROM-DROSOPHILA]__[cellcollective]_out.txt  [v24]__[r28]__[SPZ-PROCESSING-12-06-2013]__[ginsim]_out.txt  [v24]__[r32]__[HH-PATHWAY-11-06-2013]__[ginsim]_out.txt  [v24]__[r32]__[HH-PATHWAY-OF-DROSOPHILA]__[cellcollective]_out.txt  [v24]__[r48]__[TOL-REGULATORY-NETWORK]__[cellcollective]_out.txt  [v25]__[r67]__[S-PHASE-ENTRY-SIGNALLING-PATHWAY]__[biomodels]_out.txt  [v25]__[r70]__[BT474-BREAST-CELL-LINE-LONGTERM]__[cellcollective]_out.txt  [v25]__[r70]__[HCC1954-BREAST-CELL-LINE-LONGTERM]__[cellcollective]_out.txt  [v25]__[r81]__[SKBR3-BREAST-CELL-LINE-LONGTERM]__[cellcollective]_out.txt  [v26]__[r28]__[WG-PATHWAY-11-06-2013]__[ginsim]_out.txt  [v26]__[r29]__[WG-PATHWAY-OF-DROSOPHILA]__[cellcollective]_out.txt  [v26]__[r58]__[TRICHOSTRONGYLUS-RETORTAEFORMIS]__[cellcollective]_out.txt  [v26]__[r79]__[HSPC-MSC-0]__[ginsim]_out.txt  [v26]__[r81]__[PROINFLAMMATORY-TUMOR-MICROENVIRONMENT]__[cellcollective]_out.txt  [v28]__[r123]__[FA-BRCA-PATHWAY]__[cellcollective]_out.txt  [v28]__[r45]__[CALZONE-CELL-FATE]__[ginsim]_out.txt  [v28]__[r45]__[DEATH-RECEPTOR-SIGNALING]__[cellcollective]_out.txt  [v29]__[r128]__[BLOOD-STEM-CELL-NETWORK]__[biomodels]_out.txt  [v31]__[r50]__[SEPARATION-INITIATION-NETWORK]__[cellcollective]_out.txt  [v321]__[r533]__[SIGNALING-IN-MACROPHAGE-ACTIVATION]__[cellcollective]_out.txt  [v32]__[r156]__[TUMOR-CELL-INVASION-AND-MIGRATION]__[cellcollective]_out.txt  [v33]__[r52]__[CELL-FATE-MULTISCALE]__[ginsim]_out.txt  [v33]__[r79]__[BORDETELLA-BRONCHISEPTICA]__[cellcollective]_out.txt  [v33]__[r94]__[LYMPHOID-AND-MYELOID-CELL-SPECIFICATION]__[cellcollective]_out.txt  [v34]__[r43]__[CHOLESTEROL-REGULATORY-PATHWAY]__[cellcollective]_out.txt  (+24 more)
src/: lib.rs  (+5 more)
(+104 files in other folders)
