[package]
name = "biodivine-aeon-server"
version = "0.6.0"
authors = ["Samuel Pastva <daemontus@gmail.com>"]
edition = "2024"
default-run = "biodivine-aeon-server"

# Enable rich docs for some online docs autogen services.
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "docs-head.html"]

[profile.release]
# This is important for profiling - otherwise we would get unreadable traces.
#debug = true
# LTO is required for `computation-process` algorithms to work as best as they can.
lto = true

[dependencies]
biodivine-lib-bdd = "0.6.2"
biodivine-lib-param-bn = "0.7.0"
biodivine-algo-bdd-scc = "0.3.2"
cancel-this = "0.4.0"
computation-process = "0.2.0"
rocket = "0.5.1"
rocket_cors = "0.6.0"
json = "0.12.4"
regex = "1.11.1"
tokio = "1.41.1"
lazy_static = "1.5.0"
biodivine-pbn-control = { git = "https://github.com/sybila/biodivine-pbn-control", rev = "9e31bab9d000266ea25c35cc752c69077973d43c" }
num-bigint = "0.4.6"
num-traits = "0.2.19"
env_logger = "0.11.8"

[dev-dependencies]