[package]
name = "biodivine-aeon-server"
# When changing, also update the versions in packager.*.toml files
version = "0.7.1"
authors = ["Samuel Pastva <daemontus@gmail.com>"]
edition = "2024"
default-run = "biodivine-aeon-server"

[profile.release]
# This is important for profiling - otherwise we would get unreadable traces.
#debug = true
# LTO is required for `computation-process` algorithms to work as best as they can.
lto = true

[dependencies]
biodivine-lib-bdd = "0.6.2"
biodivine-lib-param-bn = "0.7.0"
biodivine-algo-bdd-scc = "0.3.2"
biodivine-pbn-control = { git = "https://github.com/sybila/biodivine-pbn-control", rev = "9e31bab9d000266ea25c35cc752c69077973d43c" }
cancel-this = "0.4"
computation-process = "0.2"
rocket = "0.5.1"
rocket_cors = "0.6.0"
json = "0.12"
regex = "1.12"
tokio = "1.49"
num-bigint = "0.4"
num-traits = "0.2"
env_logger = "0.11"
# For our purposes, a synchronous cache is quite all right (we don't have high request contention)
moka = { version = "0.12", features = ["sync"] }

[dev-dependencies]